--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -223,6 +223,27 @@
   <data name="SplitPaneLeftText" xml:space="preserve">
     <value>Split Pane Left</value>
   </data>
+  <data name="SwapPaneText" xml:space="preserve">
+    <value>Split pane</value>
+  </data>
+  <data name="SwapPaneDownText" xml:space="preserve">
+    <value>Swap Pane Down</value>
+  </data>
+  <data name="SwapPaneRightText" xml:space="preserve">
+    <value>Swap Pane Right</value>
+  </data>
+  <data name="SwapPaneUpText" xml:space="preserve">
+    <value>Swap Pane Up</value>
+  </data>
+  <data name="SwapPaneLeftText" xml:space="preserve">
+    <value>Swap Pane Left</value>
+  </data>
+  <data name="TogglePaneZoomText" xml:space="preserve">
+    <value>Toggle Pane Zoom</value>
+  </data>
+  <data name="CloseOtherPanesText" xml:space="preserve">
+    <value>Close Other Panes</value>
+  </data>
   <data name="SearchWebText" xml:space="preserve">
     <value>Web search</value>
   </data>
