the split pane entries exists twice on the second level, add a 'duplicate pane' entry at the first position of the third level

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -223,6 +223,9 @@
   <data name="SplitPaneLeftText" xml:space="preserve">
     <value>Split Pane Left</value>
   </data>
+  <data name="SplitPaneDuplicateText" xml:space="preserve">
+    <value>Duplicate pane</value>
+  </data>
   <data name="SwapPaneText" xml:space="preserve">
     <value>Swap pane</value>
   </data>
