add visible with a separation line between the 'duplicate' entry and the other ones, changed from 'Duplicate pane' to 'Duplicate <profile_name>'

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -224,7 +224,7 @@
     <value>Split Pane Left</value>
   </data>
   <data name="SplitPaneDuplicateText" xml:space="preserve">
-    <value>Duplicate pane</value>
+    <value>Duplicate</value>
   </data>
   <data name="SwapPaneText" xml:space="preserve">
     <value>Swap pane</value>
