--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -1966,7 +1966,7 @@
     <comment>Header for a control to toggle if the app should show the tabs when in full screen state.</comment>
   </data>
 	<data name="Globals_ShowTabsFullscreen.HelpText" xml:space="preserve">
-    <value>When enabled, the tab bar will be visibile when the app is full screen</value>
+    <value>When enabled, the tab bar will be visible when the app is full screen</value>
     <comment>A description for what the "show tabs in full screen" setting does.</comment>
   </data>
   <data name="Profile_PathTranslationStyle.[using:Windows.UI.Xaml.Automation]AutomationProperties.Name" xml:space="preserve">
