--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -1962,15 +1962,15 @@
     <comment>Header for a control to toggle displaying a shield in the title bar of the app. "Admin" refers to elevated sessions like "run as Admin"</comment>
   </data>
   <data name="Profile_Delete_Orphaned.Header" xml:space="preserve">
-    <value>Profile no longer exists</value>
+    <value>Profile no longer detected</value>
   </data>
   <data name="Profile_Delete_Orphaned.HelpText" xml:space="preserve">
-    <value>This profile was previously automatically detected, but it appears to have been uninstalled. Customizations made to it have been kept, but you cannot use it until its software has been reinstalled.</value>
+    <value>This automatically-detected profile appears to have been uninstalled. Changes you have made to it are preserved, but it cannot be used until it has been reinstalled.</value>
   </data>
   <data name="Profile_Source_Orphaned.Header" xml:space="preserve">
     <value>Original Source</value>
   </data>
   <data name="Profile_Source_Orphaned.HelpText" xml:space="preserve">
-    <value>The software which originally installed this profile</value>
+    <value>Indicates the software that originally created this profile.</value>
   </data>
 </root>
