--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -1942,7 +1942,7 @@
     <comment>Header for a control to determine what sound the app uses to notify the user. "Bell" is the common term in terminals for the BEL character (like the metal device used to chime).</comment>
   </data>
   <data name="Profile_BellSound.HelpText" xml:space="preserve">
-    <value>Controls what sound is played when the application emits a BEL character. "Bell notification style" must have "audible" set.</value>
+    <value>Controls what sound is played when the application emits a BEL character. "Bell notification style" must include "Audible".</value>
     <comment>A description for what the "bell sound" setting does. Presented near "Profile_BellSound". "Bell notification style" and "audible" come from "Profile_BellStyle" and "Profile_BellStyleAudible.Content" respectively.{Locked="BEL"}</comment>
   </data>
   <data name="Profile_AddBellSound.Text" xml:space="preserve">
