pane split with profiles reworked, pane split context menu has submenu with all profiles, normal/left click with open profile with auto split and right click will open context menu wuth solit directions - right/down/up/left

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -211,6 +211,9 @@
   <data name="SplitPaneText" xml:space="preserve">
     <value>Split pane</value>
   </data>
+  <data name="SplitPaneToolTipText" xml:space="preserve">
+    <value>Right click for split directions - right/down/up/left</value>
+  </data>
   <data name="SplitPaneDownText" xml:space="preserve">
     <value>Split pane down</value>
   </data>
