--- a/src/cascadia/TerminalConnection/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalConnection/Resources/en-US/Resources.resw
@@ -224,10 +224,9 @@
     <value>The requested operation requires elevation.</value>
   </data>
   <data name="CtrlCToClose" xml:space="preserve">
-    <value>{Application Exit by CTRL+C} The application terminated as a result of a CTRL+C.</value>
+    <value>The application terminated as a result of a CTRL+C.</value>
   </data>
-  <data name="BadCommandOrFile" xml:space="preserve">
-    <value>{0} is not recognized as an internal or external command, operable program or batch file.</value>
-    <comment>The first argument {0} is the command or file, as provided by the user</comment>
+  <data name="FileNotFound" xml:space="preserve">
+    <value>The system cannot find the file specified.</value>
   </data>
 </root>
