--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -2032,6 +2032,22 @@
     <value>Cancel</value>
     <comment>Text label for secondary button the color picker content dialog. When clicked, the operation of selecting a color is cancelled by the user.</comment>
   </data>
+  <data name="Profile_CursorColor_NullableColorPicker.NullColorButtonLabel" xml:space="preserve">
+    <value>Cursor color from color scheme</value>
+    <comment>Label for a button directing the user to use the cursor color defined in the terminal's current color scheme.</comment>
+  </data>
+  <data name="Profile_Foreground_NullableColorPicker.NullColorButtonLabel" xml:space="preserve">
+    <value>Foreground color from color scheme</value>
+    <comment>Label for a button directing the user to use the foreground color defined in the terminal's current color scheme.</comment>
+  </data>
+  <data name="Profile_Background_NullableColorPicker.NullColorButtonLabel" xml:space="preserve">
+    <value>Background color from color scheme</value>
+    <comment>Label for a button directing the user to use the background color defined in the terminal's current color scheme.</comment>
+  </data>
+  <data name="Profile_SelectionBackground_NullableColorPicker.NullColorButtonLabel" xml:space="preserve">
+    <value>Selection background color from color scheme</value>
+    <comment>Label for a button directing the user to use the selection background color defined in the terminal's current color scheme.</comment>
+  </data>
   <data name="Profile_IconTypeNone" xml:space="preserve">
     <value>None</value>
     <comment>An option to choose from for the "icon style" dropdown. When selected, there will be no icon for the profile.</comment>
@@ -2307,9 +2323,5 @@
   <data name="Profile_TabTitleNone" xml:space="preserve">
     <value>None</value>
     <comment>Text displayed when the tab title is not defined.</comment>
-  </data>
-  <data name="NullableColorPicker_DefaultNullColorButtonLabel" xml:space="preserve">
-    <value>Use scheme color</value>
-    <comment>Label for a button directing the user to use the color defined in the terminal's current color scheme.</comment>
   </data>
 </root>
